--- a/css.css
+++ b/css.css
@@ -476,6 +476,10 @@ a {
     padding: 2rem;
   }
 
+  .one{
+    padding: 4rem;
+  }
+
   .authentication-container {
     margin-left: auto;
   }
@@ -577,24 +581,27 @@ a {
     display: flex;
     flex-direction: row;
     border-radius: 0rem 5rem 0rem 5rem;
-    padding: 1.4rem;
+    padding: 3rem;
     margin-top: -5rem;
   }
 
   .img-up {
     position: absolute;
     top: -8rem;
-    right: 39rem;
+    /* right: 39rem; */
     width: 45%;
+    margin-right: 1rem;
   }
 
   .three article {
+    flex: 1;
     top: 0;
-    left: 40rem;
+    margin-left: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 50%;
+    max-width: 50%;
+    padding: 2rem;
   }
 
   .three h2,
@@ -618,6 +625,7 @@ a {
     margin-top: 20rem;
     gap: 0rem;
     position: relative;
+    padding: 2rem;
   }
 
   .illustration-laptop-desktop {
@@ -665,6 +673,7 @@ a {
     align-items: baseline;
     gap: 8rem;
     margin-top: 10rem;
+    padding: 4rem;
   }
 
   footer h2 {
